--- a/GAME3001_A3_Daekoen_Lee_Michale_Shular/GAME1017_Template_W01/GAME1017_Template_W01.vcxproj.filters
+++ b/GAME3001_A3_Daekoen_Lee_Michale_Shular/GAME1017_Template_W01/GAME1017_Template_W01.vcxproj.filters
@@ -127,6 +127,12 @@
     <Image Include="Img\Tiles.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Img\Kit.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Img\0x72.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Dat\Level1.txt">
