tile change, sprite change (bug?? white outline)

--- a/GAME3001_A3_Daekoen_Lee_Michale_Shular/GAME1017_Template_W01/GAME1017_Template_W01.vcxproj
+++ b/GAME3001_A3_Daekoen_Lee_Michale_Shular/GAME1017_Template_W01/GAME1017_Template_W01.vcxproj
@@ -152,8 +152,10 @@
     <ClInclude Include="Tile.h" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="Img\0x72.png" />
     <Image Include="img\circle.png" />
     <Image Include="Img\Enemies.png" />
+    <Image Include="Img\Kit.png" />
     <Image Include="Img\play.png" />
     <Image Include="Img\PlayerShip.png" />
     <Image Include="Img\Tiles.png" />
