--- a/GAME3001_A3_Daekoen_Lee_Michale_Shular/GAME1017_Template_W01/GAME1017_Template_W01.vcxproj
+++ b/GAME3001_A3_Daekoen_Lee_Michale_Shular/GAME1017_Template_W01/GAME1017_Template_W01.vcxproj
@@ -120,6 +120,7 @@
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="CollisionManager.cpp" />
     <ClCompile Include="DebugManager.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="EventManager.cpp" />
     <ClCompile Include="FontManager.cpp" />
@@ -137,6 +138,7 @@
     <ClInclude Include="Button.h" />
     <ClInclude Include="CollisionManager.h" />
     <ClInclude Include="DebugManager.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="EventManager.h" />
     <ClInclude Include="FontManager.h" />
