--- a/GAME3001_A3_Daekoen_Lee_Michale_Shular/GAME1017_Template_W01/GAME1017_Template_W01.vcxproj
+++ b/GAME3001_A3_Daekoen_Lee_Michale_Shular/GAME1017_Template_W01/GAME1017_Template_W01.vcxproj
@@ -165,6 +165,7 @@
     <Image Include="Img\lose.png" />
     <Image Include="Img\play.png" />
     <Image Include="Img\PlayerShip.png" />
+    <Image Include="Img\restart.png" />
     <Image Include="Img\Tiles.png" />
     <Image Include="Img\win.png" />
   </ItemGroup>
