--- a/GAME3001_A3_Daekoen_Lee_Michale_Shular/GAME1017_Template_W01/GAME1017_Template_W01.vcxproj
+++ b/GAME3001_A3_Daekoen_Lee_Michale_Shular/GAME1017_Template_W01/GAME1017_Template_W01.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="Button.h" />
     <ClInclude Include="CollisionManager.h" />
     <ClInclude Include="DebugManager.h" />
+    <ClInclude Include="DestoryBox.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="EventManager.h" />
