--- a/GAME3001_A3_Daekoen_Lee_Michale_Shular/GAME1017_Template_W01/GAME1017_Template_W01.vcxproj.filters
+++ b/GAME3001_A3_Daekoen_Lee_Michale_Shular/GAME1017_Template_W01/GAME1017_Template_W01.vcxproj.filters
@@ -125,6 +125,9 @@
     <ClInclude Include="Utility.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="DestoryBox.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="img\circle.png">
