--- a/GAME3001_A3_Daekoen_Lee_Michale_Shular/GAME1017_Template_W01/GAME1017_Template_W01.vcxproj.filters
+++ b/GAME3001_A3_Daekoen_Lee_Michale_Shular/GAME1017_Template_W01/GAME1017_Template_W01.vcxproj.filters
@@ -160,6 +160,12 @@
     <Image Include="Img\restart.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Img\startBackground.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Img\start.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Dat\Level1.txt">
